--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <header class="container">
+    <header class="container-fluid">
       <div class="row">
         <h1 class="col-sm-8">AM Interiors</h1>
         <nav class="navbar">
@@ -18,11 +18,11 @@
         </nav>
     </div>
     </header>
-    <section class="jumbotron">
+    <section class="jumbotron jumbotron-fluid">
       <h1>“I strive for two things in design: simplicity and clarity. Great design is born of those two things.”</h1>
       <p> - Lindon Leader</p>
     </section>
-    <section class="container">
+    <section class="container-fluid">
       <div class="row" name="About" id="About">
         <h2>About</h2>
           <div class="col-sm-3">
@@ -32,7 +32,7 @@
             <p>My infatuation with design had humble beginnings. I would sketch layouts of nearly every room inside my childhood home in Philadelphia, convinced I could find a configuration that just felt better. It wasn’t uncommon for my mother to come home at the end of the day and find the living room layout completely changed. While my drawing skills have most certainly improved since then, one fact that has not changed is the enthusiasm I feel when given the opportunity to create something that is not only captivating, but safe and functional. </p>
           </div>
     </section>
-    <section class="container">
+    <section class="container-fluid">
       <div class="row" name="Portfolio" id="Portfolio">
         <h2>Portfolio</h2>
           <div class="col-sm-6">
@@ -57,7 +57,7 @@
           </div>
       </div>
     </section>
-    <section>
+    <section class="container-fluid">
       <div class="row" name="Contact" id="Contact">
         <h2>Contact Me</h2>
           <ul class="col-sm-9" id="Contact">
@@ -75,7 +75,7 @@
     </section>
 </section>
 <!--Section: Contact v.2-->
-    <footer class="container">
+    <footer class="container-fluid">
       <div class="row">
         <p class="col-sm-2">&copy; 2018 AMInteriors</p>
       </div>
